# osu-sampler

./: CMakeLists.txt  README.md  sampler.conf
src/: CMakeLists.txt  NBD_test.cpp  Poisson.cpp  Poisson.h  RandomVariable.cpp  RandomVariable1DArray.cpp  RandomVariable1DArray.h  RandomVariable2DArray.cpp  RandomVariableNDArray.cpp  Table.cpp  arsenal.cpp  arsenal.h  emissionfunction.cpp  emissionfunction.h  main.cpp  readindata.cpp  readindata.h
tables/: make-urqmd-particle-list
